<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:context=".SubsidioListFragment">


    <TextView
        android:id="@+id/subsidio_nombre"
        android:layout_width="66dp"
        android:layout_height="27dp"
        android:text="@string/nombre_lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/subsidio_valor"
        android:layout_width="77dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:text="@string/lista_valor"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/subsidio_nombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subsidio_numero_personas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/lista_numero_personas"
        app:layout_constraintStart_toEndOf="@+id/subsidio_valor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subsidio_numero_hijos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/lista_numero_hijos"
        app:layout_constraintStart_toEndOf="@+id/subsidio_numero_personas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subsidio_total"
        android:layout_width="110dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/lista_total"
        app:layout_constraintStart_toEndOf="@+id/subsidio_numero_hijos"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subsidio_valor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/add_new_item"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />




</androidx.constraintlayout.widget.ConstraintLayout>