<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarSubsidioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/subsidio_nombre_label"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/nombre"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subsidio_nombre"
                android:layout_width="374dp"
                android:layout_height="match_parent"
                android:hintTextColor="#616161"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/subsidio_valor_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/valor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subsidio_nombre_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valor"
                android:layout_width="374dp"
                android:layout_height="match_parent"
                android:hintTextColor="#616161"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subsidio_numero_personas_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/numero_personas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subsidio_valor_label" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subsidio_numero_personas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subsidio_numero_hijos_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/numero_personas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subsidio_numero_personas_label" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subsidio_numero_hijos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/guardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subsidio_numero_hijos_label" />


        <TextView
            android:layout_width="336dp"
            android:layout_height="17dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/total"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guardar" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>